Allow for global phrase and question creation only for users with ADMIN role
Include global errors in error response
Update Postman collection