@@ -4,113 +4,85 @@ import com.reallylastone.quiz.util.Messages;
 import com.reallylastone.quiz.util.validation.StateValidationErrorsException;
 import com.reallylastone.quiz.util.validation.ValidationErrorsException;
 import jakarta.servlet.http.HttpServletRequest;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
 import lombok.RequiredArgsConstructor;
-import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.AuthenticationException;
-import org.springframework.validation.Errors;
+import org.springframework.validation.ObjectError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
 import java.net.URI;
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 @ControllerAdvice
 @RequiredArgsConstructor
 @Slf4j
-// based on https://github.com/VictorKrapivin/jsr-vs-spring-validation
 public class GlobalExceptionHandler {
     private final Messages messages;
 
     @ExceptionHandler({ ValidationErrorsException.class })
-    public ResponseEntity<ErrorMessage> handle(final ValidationErrorsException e, HttpServletRequest request) {
-        List<InvalidInputDataErrors.FieldError> errors = InvalidInputDataErrors.from(e).getErrors();
+    public ResponseEntity<ErrorResponse> handle(final ValidationErrorsException e, HttpServletRequest request) {
+        List<ResponseError> errors = buildResponseErrors(e.getErrors().getGlobalErrors(),
+                e.getErrors().getFieldErrors());
+
         return unprocessableEntity(request, errors);
     }
 
     @ExceptionHandler({ StateValidationErrorsException.class })
-    public ResponseEntity<ErrorMessage> handle(final StateValidationErrorsException e, HttpServletRequest request) {
-        return unprocessableEntity(request,
-                e.getErrors().stream().map(error -> messages.getMessage(error.getMessageKey(), null)).toList());
+    public ResponseEntity<ErrorResponse> handle(final StateValidationErrorsException e, HttpServletRequest request) {
+        List<ResponseError> errors = new ArrayList<>(e.getErrors().stream()
+                .map(error -> new GlobalError(messages.getMessage(error.getMessageKey(), null))).toList());
+
+        return unprocessableEntity(request, errors);
     }
 
     @ExceptionHandler({ AuthenticationException.class })
-    public ResponseEntity<ErrorMessage> handle(final AuthenticationException e, HttpServletRequest request) {
-        return unprocessableEntity(request, Collections.singletonList(e.getMessage()));
+    public ResponseEntity<ErrorResponse> handle(final AuthenticationException e, HttpServletRequest request) {
+        return unprocessableEntity(request, List.of(new GlobalError(e.getMessage())));
     }
 
     @ExceptionHandler({ MethodArgumentNotValidException.class })
-    public ResponseEntity<ErrorMessage> handle(final MethodArgumentNotValidException e, HttpServletRequest request) {
-        return unprocessableEntity(request, Collections.singletonList(e.getParameter() + ":" + e.getBody()));
+    public ResponseEntity<ErrorResponse> handle(final MethodArgumentNotValidException e, HttpServletRequest request) {
+        List<ResponseError> errors = buildResponseErrors(e.getBindingResult().getGlobalErrors(),
+                e.getBindingResult().getFieldErrors());
+
+        return unprocessableEntity(request, errors);
     }
 
     @ExceptionHandler({ IllegalArgumentException.class })
-    public ResponseEntity<ErrorMessage> handle(final IllegalArgumentException e, HttpServletRequest request) {
-        return unprocessableEntity(request, Collections.singletonList(e.getMessage()));
+    public ResponseEntity<ErrorResponse> handle(final IllegalArgumentException e, HttpServletRequest request) {
+        return unprocessableEntity(request, List.of(new GlobalError(e.getMessage())));
     }
 
     @ExceptionHandler({ Exception.class })
-    public ResponseEntity<ErrorMessage> handle(final Exception e, HttpServletRequest request) {
+    public ResponseEntity<ErrorResponse> handle(final Exception e, HttpServletRequest request) {
         log.error("Unexpected error occurred: ", e);
-        return internalServerError(request, List.of(e.getMessage()));
+        return internalServerError(request, List.of(new GlobalError(e.getMessage())));
     }
 
-    private ResponseEntity<ErrorMessage> unprocessableEntity(HttpServletRequest request, List<?> errors) {
-        ErrorMessage message = ErrorMessage.builder().parameters(buildParams(errors))
-                .instance(URI.create(request.getRequestURI())).status(HttpStatus.UNPROCESSABLE_ENTITY)
-                .title("Invalid input data").build();
+    private ResponseEntity<ErrorResponse> unprocessableEntity(HttpServletRequest request, List<ResponseError> errors) {
+        ErrorResponse message = ErrorResponse.builder().errors(errors).instance(URI.create(request.getRequestURI()))
+                .status(422).title("Invalid input data").build();
 
-        return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).body(message);
+        return ResponseEntity.status(422).body(message);
     }
 
-    private ResponseEntity<ErrorMessage> internalServerError(HttpServletRequest request, List<?> errors) {
-        ErrorMessage message = ErrorMessage.builder().parameters(buildParams(errors))
-                .instance(URI.create(request.getRequestURI())).status(HttpStatus.INTERNAL_SERVER_ERROR)
-                .title("Internal server error").build();
+    private ResponseEntity<ErrorResponse> internalServerError(HttpServletRequest request, List<ResponseError> errors) {
+        ErrorResponse message = ErrorResponse.builder().errors(errors).instance(URI.create(request.getRequestURI()))
+                .status(500).title("Internal server error").build();
 
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(message);
+        return ResponseEntity.status(500).body(message);
     }
 
-    private Map<String, Object> buildParams(List<?> errors) {
-        Map<String, Object> params = new HashMap<>();
-        params.put("errors", errors);
-
-        return params;
+    private static List<ResponseError> buildResponseErrors(List<ObjectError> e,
+            List<org.springframework.validation.FieldError> e1) {
+        List<ResponseError> errors = new ArrayList<>();
+        errors.addAll(e.stream().map(g -> new GlobalError(g.getDefaultMessage())).toList());
+        errors.addAll(e1.stream().map(f -> new FieldError(f.getField(), f.getDefaultMessage())).toList());
+        return errors;
     }
 
-    @Getter
-    public static class InvalidInputDataErrors {
-        private final List<FieldError> errors;
-
-        private InvalidInputDataErrors(List<FieldError> errors) {
-            this.errors = errors;
-        }
-
-        static InvalidInputDataErrors from(ValidationErrorsException e) {
-            Errors errors = e.getErrors();
-            List<org.springframework.validation.FieldError> source = errors.getFieldErrors();
-            List<FieldError> result = new ArrayList<>();
-            for (org.springframework.validation.FieldError fieldError : source) {
-                result.add(new FieldError(fieldError.getField(), fieldError.getDefaultMessage()));
-            }
-            return new InvalidInputDataErrors(result);
-        }
-
-        @AllArgsConstructor
-        @Getter
-        @Setter
-        public static class FieldError {
-            private String field;
-            private String message;
-        }
-    }
 }
